--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,14 @@ body {
   font-style: normal;
 }
 
+.signature {
+  color: #5c848e;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  margin: 10px 0 0 0;
+  opacity: 75%;
+}
+
 .city-time,
 .list-group-item {
   display: inline;
